# hegel-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE-sample.md  RELEASE.md  build.rs  flake.nix  justfile
.claude/: CLAUDE.md
.github/actions/base/: action.yml
.github/scripts/: bump_hegel_core.py  release.py
.github/workflows/: bump-hegel-core.yml  check-release.yml  ci.yml  conformance.yml  coverage.yml  docs.yml  lint.yml  nix.yml  release.yml  test-all-features.yml  test.yml  zizmor.yml
docs/: getting-started.md
examples/: die_hard.rs  ledger.rs  min_stack.rs  stack.rs
hegel-derive/: Cargo.toml
hegel-derive/src/: enum_gen.rs  hegel_test.rs  lib.rs  struct_gen.rs  utils.rs
hegel-macros/: Cargo.toml
hegel-macros/src/: composite.rs  enum_gen.rs  hegel_test.rs  lib.rs  stateful.rs
nix/: flake.nix
src/: antithesis.rs  cbor_utils.rs  control.rs  embedded.rs  gen.rs  lib.rs  runner.rs  stateful.rs  test_case.rs
src/generators/: arrays.rs  binary.rs  collections.rs  combinators.rs  compose.rs  data.rs  default.rs  fixed_dict.rs  formats.rs  from_type.rs  generators.rs  misc.rs  mod.rs  numeric.rs  primitives.rs  random.rs  strings.rs  tuples.rs
src/protocol/: channel.rs  connection.rs  mod.rs  packet.rs
tests/: integers_bounds.rs  property_tests.rs  test_antithesis.rs  test_arrays.rs  test_collections.rs  test_combinators.rs  test_compilation_edge_cases.rs  test_compose.rs  test_composite.rs  test_database_key.rs  test_default.rs  test_derive.rs  test_flaky_global_state.rs  test_floats.rs  test_from_type.rs  test_hang.rs  test_health_check.rs  test_hegel_test.rs  test_integers.rs  test_lifetimes.rs  test_output.rs  test_randoms.rs  test_settings.rs  test_stateful.rs  test_tuples.rs  test_validation.rs
tests/common/: project.rs  utils.rs
tests/conformance/: test_conformance.py
tests/conformance/rust/: Cargo.toml
tests/conformance/rust/src/: lib.rs
tests/nix/tests/: integration.rs
tests/test_find_quality/: collections.rs  floats.rs  integers.rs  main.rs  one_of.rs  strings.rs
tests/test_shrink_quality/: collections.rs  composite.rs  flatmap.rs  floats.rs  integers.rs  main.rs  mixed_types.rs  strings.rs
