[package]
name = "hegel-derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
description = "Derive macros for the Hegel property-based testing library"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
