[package]
name = "hegeltest-macros"
version = "0.3.1"
edition = "2024"
rust-version = "1.86"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hegeldev/hegel-rust"
homepage = "http://hegel.dev"
description = "Procedural macros for Hegel."

[lib]
name = "hegel_macros"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
