[package]
name = "hegel-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
hegel = { path = "../../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

[[bin]]
name = "test_booleans"
path = "src/bin/test_booleans.rs"

[[bin]]
name = "test_integers"
path = "src/bin/test_integers.rs"

[[bin]]
name = "test_floats"
path = "src/bin/test_floats.rs"

[[bin]]
name = "test_text"
path = "src/bin/test_text.rs"

[[bin]]
name = "test_binary"
path = "src/bin/test_binary.rs"

[[bin]]
name = "test_lists"
path = "src/bin/test_lists.rs"

[[bin]]
name = "test_sampled_from"
path = "src/bin/test_sampled_from.rs"

[[bin]]
name = "test_hashmaps"
path = "src/bin/test_hashmaps.rs"
